Removed class for input headings, fixed error message for too high amount number

--- a/style.css
+++ b/style.css
@@ -115,15 +115,6 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     margin: 4rem auto 0 auto;
 }
 
-.input__header {
-    font-size: 3rem;
-    font-weight: 700;
-    color: var(--color-tertiary);
-    text-transform: uppercase;
-    display: block;
-    margin-bottom: 1rem;
-}
-
 .input {
     display: inline-block;
     padding: 2rem .75rem .75rem .75rem;
